fix: fix profile and status bottom margin on mobile

--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -12,6 +12,6 @@
     width: calc(.85vw + 15.27px);
     height: calc(.85vw + 15.27px);
     top:  calc(1.14vw + 5.36px);
-    right: calc(-3.13vw - 10px);
+    right: calc(-1.17vw - 24.55px);
   }
 }
