--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,8 +4,7 @@
 
 @media screen and (max-width: 768px) {
   .profile__info {
-
     text-align: center;
-    margin: 25px 0 36px;
+    margin: 25px 0 30px;
   }
 }
